Se agrega unos comentarios al cuaderno de colab.

--- a/Ejemplos_vistos_en_la_primera_clase.ipynb
+++ b/Ejemplos_vistos_en_la_primera_clase.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMPn7mHJZkJDZXLYfqcQjKh",
+      "authorship_tag": "ABX9TyP/f5JY8fCR9Z2SklT+et5A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Acá lo que voy a realizar es una ejecuación de un comando de linux"
+        "Acá lo que voy a realizar es una ejecuación de un comando de linux que me genera un archivo vacio."
       ],
       "metadata": {
         "id": "LbZRc4oEPw-b"
@@ -43,13 +43,13 @@
       "metadata": {
         "id": "yGpwBX_IQDzm"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Estoy probando el ejemplo que hizo el profesor en la pre"
+        "Estoy probando el ejemplo que hizo el profesor en la primera clase para evaluar una estructura condicional."
       ],
       "metadata": {
         "id": "PjtsN7YsfzqW"
@@ -71,7 +71,7 @@
         "id": "cFlG0NMgfJba",
         "outputId": "e44418cb-f39e-443d-bc75-434b24d53d33"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -85,7 +85,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Estamos probando un condicional anidado con el ejemplo siguiente"
+        "Estamos probando un condicional anidado con el ejemplo siguiente:"
       ],
       "metadata": {
         "id": "UoaD88z4grLv"
@@ -111,7 +111,7 @@
         "id": "ZxtfeOjjRrSf",
         "outputId": "71552c35-2812-4895-e588-3afb9a7b7eca"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -139,7 +139,7 @@
         "id": "H8deM0uahWb8",
         "outputId": "23593760-410f-4992-bb9b-3f8d1e166c72"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,7 +164,7 @@
         "id": "zm24NWNsiOS6",
         "outputId": "19f97a99-8199-47e5-db20-82f2239e862a"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -203,7 +203,7 @@
         "id": "Q8zeIT7QicFM",
         "outputId": "bab3df8b-bcc7-4d89-ca6d-d46560ff77d6"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -218,8 +218,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Con este comando de linux veo el contenido del directorio donde estoy parado."
+      ],
+      "metadata": {
+        "id": "Ipkv3JXCTGlv"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
